<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <android.widget.TextView
    android:id="@+id/play_again"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="120dp"
    android:layout_marginEnd="120dp"
    android:layout_marginBottom="32dp"
    android:onClick="playAgain"
    android:text="@string/play_again"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.492"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/idBarChart" />

  <com.github.mikephil.charting.charts.HorizontalBarChart
    android:id="@+id/idBarChart"
    android:layout_width="346dp"
    android:layout_height="242dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@+id/play_again"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.486"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline2" />

  <TextView
    android:id="@+id/winPercentage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/winPercent"
    app:layout_constraintBaseline_toBaselineOf="@+id/maxStreak"
    app:layout_constraintEnd_toStartOf="@+id/maxStreak"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/played" />

  <TextView
    android:id="@+id/maxStreak"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/maxStreak"
    app:layout_constraintBottom_toTopOf="@+id/guideline2"
    app:layout_constraintEnd_toStartOf="@+id/currStreak"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/winPercentage" />

  <TextView
    android:id="@+id/currStreak"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    android:gravity="center"
    android:text="@string/currStreak"
    app:layout_constraintBaseline_toBaselineOf="@+id/maxStreak"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/maxStreak" />

  <TextView
    android:id="@+id/played"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/played"
    app:layout_constraintBaseline_toBaselineOf="@+id/winPercentage"
    app:layout_constraintEnd_toStartOf="@+id/winPercentage"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/playedNum"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:textSize="50sp"
    app:layout_constraintBottom_toTopOf="@+id/played"
    app:layout_constraintEnd_toStartOf="@+id/winPercentageNum"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/winPercentageNum"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:textSize="30sp"
    app:layout_constraintBottom_toTopOf="@+id/winPercentage"
    app:layout_constraintEnd_toStartOf="@+id/maxStreakNum"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/playedNum"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/maxStreakNum"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:textSize="50sp"
    app:layout_constraintBottom_toTopOf="@+id/maxStreak"
    app:layout_constraintEnd_toStartOf="@+id/currStreakNum"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/winPercentageNum"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/currStreakNum"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="16dp"
    android:gravity="center"
    android:textSize="50sp"
    app:layout_constraintBottom_toTopOf="@+id/currStreak"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/maxStreakNum"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="154dp" />

  <TextView
    android:id="@+id/stat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/stat"
    android:textSize="20sp"
    android:textStyle="bold"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/guess"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:text="@string/guess_distribution"
    android:textStyle="bold"
    android:textSize="20sp"
    android:textAlignment="center"
    app:layout_constraintBottom_toTopOf="@+id/idBarChart"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline2" />
</androidx.constraintlayout.widget.ConstraintLayout>